build_web_err.txt
   Compiling deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0525]: expected a closure that implements the `FnMut` trait, but this closure only implements `FnOnce`
   --> apps\web\src\editor.rs:25:17
    |
 25 |       Effect::new(move |_| {
    |       ----------- -^^^^^^^
    |       |           |
    |  _____|___________this closure implements `FnOnce`, not `FnMut`
    | |     |
    | |     required by a bound introduced by this call
 26 | |         if let Some(element) = editor_ref.get() {
 27 | |             let raw_element: &web_sys::HtmlElement = &element;
...   |
 42 | |                         ws.send(ClientMessage::Edit { 
    | |                         -- closure is `FnOnce` because it moves the variable `ws` out of its environment
...   |
 57 | |     });
    | |_____- the requirement to implement `FnMut` derives from here
    |
    = note: required for `{closure@apps\web\src\editor.rs:25:17: 25:25}` to implement `EffectFunction<(), SingleParam>`
note: required by a bound in `leptos::prelude::Effect::<LocalStorage>::new`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reactive_graph-0.1.8\src\effect\effect.rs:158:36
    |
158 |     pub fn new<T, M>(mut fun: impl EffectFunction<T, M> + 'static) -> Self
    |                                    ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Effect::<LocalStorage>::new`

For more information about this error, try `rustc --explain E0525`.
error: could not compile `deve_web` (bin "deve_web") due to 1 previous error
